# parser-law

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_UPDATE.md  BACKUP_SUMMARY.txt  CHANGELOG.md  DB_UPDATE.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_V2.1.0.md  GIT_WORKFLOW.md  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v2.2.0.md  docker-compose.dev.yml  docker-compose.scheduler.yml  html_parser.py  manage-scheduler.ps1  nginx.conf.example  pyproject.toml  requirements-scheduler.txt  requirements.txt  scheduler.py  scrape_mo_partea_i.py  test_concurrent_parsers.ps1  test_save.py
.backup_migrations/: 64c7a9d85b47_add_ai_processing_fields.py  create_linkuri_legislatie.py
.github/workflows/: deploy-vps.yml
data/backups/: articole_local_backup_20251120_224155.sql  articole_local_backup_20251120_224253.sql  articole_local_backup_20251120_224339.sql  articole_vps_20251120_224253.sql  articole_vps_20251120_224339.sql
data/export/: acte_domenii_20251120_215508.xlsx  acte_domenii_20251120_220815.xlsx  acte_domenii_local_20251120_224134.xlsx  acte_issues_20251120_220815.xlsx  acte_issues_local_20251120_224134.xlsx  acte_legislative_20251120_215508.xlsx  acte_legislative_20251120_220815.xlsx  acte_legislative_local_20251120_224134.xlsx  articole_20251120_215508.xlsx  articole_20251120_220815.xlsx  articole_domenii_20251120_215508.xlsx  articole_domenii_20251120_220815.xlsx  articole_domenii_local_20251120_224134.xlsx  articole_issues_20251120_220815.xlsx  articole_issues_local_20251120_224134.xlsx  articole_local_20251120_224134.xlsx  database_constraints.txt  database_export_LOCAL_all_20251120_224134.xlsx  database_export_all_20251120_215508.xlsx  database_export_all_20251120_220815.xlsx  db_comparison_report_20251120_224604.html  db_comparison_report_20251120_224604.txt  db_comparison_report_20251120_225759.html  db_comparison_report_20251120_225759.txt  domenii_20251120_215508.xlsx  domenii_20251120_220815.xlsx  domenii_local_20251120_224134.xlsx  issues_20251120_220815.xlsx  issues_local_20251120_224134.xlsx  local_acte_domenii_structure.txt  local_acte_legislative_structure.txt  local_acte_modificari_structure.txt  local_anexe_issues_structure.txt  local_articole_domenii_structure.txt  local_articole_modificari_structure.txt  local_articole_structure.txt  local_structure_issues_structure.txt  structure_issues_20251120_220815.xlsx  structure_issues_local_20251120_224134.xlsx  vps_acte_issues_structure.txt  (+9 more)
db_service/: .env.example  .env.production  AI_INTEGRATION.md  API_DOCUMENTATION.md  DIFF_TRACKING_STRATEGY.md  Dockerfile  README.md  SECURITY.md  UPDATE_STRATEGY.md  alembic.ini  create_tables.sql  docker-compose.yml  init.sql  requirements.txt
db_service/alembic/: env.py
db_service/alembic/versions/: 0b4c93b0a665_add_ai_processing_columns.py  1007e30b0c57_fix_metadate_type_to_jsonb.py  5417c175c050_add_domenii_system.py  5f128176a40b_add_issues_system_and_junction_tables.py  7ad62c5ec0a8_create_acte_legislative_and_articole_.py  aa4552000831_initial_schema_from_models.py  add_article_change_tracking.py  b862bd50316b_merge_heads.py  cf5de01d0b10_add_relevance_score_to_junction_tables.py
db_service/app/: config.py  database.py  main.py
db_service/app/api/: deps.py
db_service/app/models/: __init__.py  act_legislativ.py  ai_status.py  anexa.py  articol.py  domeniu.py  issue.py  issues_relations.py  link_legislatie.py  modificari.py
db_service/app/routers/: ai_integration.py
db_service/app/schemas/: __init__.py  act_schema.py  articol_schema.py  domeniu_schema.py  issue_schema.py
db_service/app/scripts/: test_ai_service.py  test_export_service.py
db_service/app/services/: __init__.py  ai_service.py  category_service.py  diff_service.py  export_service.py  import_service.py
db_service/app/static/: index.html
db_service/migrations/: 002_add_issues_system.sql  003_add_domenii_system.sql  004_add_ai_columns.sql  add_ai_processing.sql  add_categories_support.sql  add_issues_support.sql
db_service/scripts/: run_import.py
docker/: Dockerfile.scheduler
docs/: README.md
docs/adoption/: guide.md  strategy.md
docs/architecture/: comparison.md  database.md  scheduler.md
docs/development/: git-workflow.md  guide.md  release-management.md  standards.md
docs/features/: AI_INTEGRATION.md  ai-processing.md  categories.md  web-interface.md  web-ui.md
docs/getting-started/: deployment.md  local-development.md  quickstart.md
docs/operations/: rollback.md
export_csv/: acte_categories.csv  acte_issues.csv  acte_legislative.csv  articole.csv  articole_issues.csv  categories.csv  database_schema.csv  issues.csv  linkuri_legislatie.csv
infra/: README.md  vps-setup.md
parser_law/parser-law/: .gitignore  CLEANUP_SUMMARY.md  DATABASE_STRATEGY.txt  DEPLOYMENT_VPS.md  QUALITY_RULES.md  QUICKSTART_VPS.md  README.md  SCHEDULER_README.md  docker-compose.scheduler.yml  html_parser.py  hybrid_parser.py  linkuri_legislatie.txt  quality_checker.py  scheduler.py  scraper_legislatie.py  test_markdown.py
parser_law/parser-law/db_service/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  (+4 more)
scripts/: DEPLOYMENT_README.md  PATH_CONFIGURATION.md  cleanup.py  common-config.sh  compare_db_structures.ps1  deploy-ai-features.sh  deploy-helpers.ps1  deploy-v2.1.0.sh  deploy-vps.sh  deploy-web-interface.ps1  deploy-web-interface.sh  deploy.sh  dev-start.ps1  export_local_to_excel.ps1  export_to_excel.py  export_vps_to_excel.ps1  install-dependencies.sh  quick-deploy-vps.sh  release.ps1  restructure-v2.ps1  rollback.sh  setup-local-dev.ps1  setup-vps.sh  sync_vps_to_local.ps1  test-ai-features.ps1  test-migration.sh
src/config/: settings.py
src/scheduler/: scheduler.py
src/scraper/: html_parser.py  hybrid_parser.py  legislatie.py  metadata_extractor.py
(+26 files in other folders)
