# ============================================================================
# Python Project Configuration (pyproject.toml)
# ============================================================================
# 
# This file configures:
# - Black (code formatter)
# - isort (import sorter)
# - pytest (testing framework)
# - Coverage (test coverage)
# 
# ============================================================================

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parser-law"
version = "1.0.0"
description = "Parser and API for Romanian legal acts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Octavian", email = "octavian@issuemonitoring.ro"}
]
keywords = ["legal", "parser", "romanian-law", "api", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

# ----------------------------------------------------------------------------
# Black Configuration (Code Formatter)
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude these directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions  # Don't format migration files
  | __pycache__
)/
'''

# ----------------------------------------------------------------------------
# isort Configuration (Import Sorter)
# ----------------------------------------------------------------------------
[tool.isort]
profile = "black"  # Compatible with Black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Import grouping
known_first_party = ["app", "tests"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "alembic"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Skip these files/directories
skip_glob = [
    "venv/*",
    ".venv/*",
    "alembic/versions/*",
    "__pycache__/*",
    "build/*",
    "dist/*"
]

# ----------------------------------------------------------------------------
# pytest Configuration (Testing Framework)
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Add project root to Python path
pythonpath = ["."]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Fail on unknown markers
    "--tb=short",            # Shorter traceback format
    "--color=yes",           # Colored output
    "-ra",                   # Show summary of all test outcomes
]

# Markers for organizing tests
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (requires database)",
    "slow: Slow tests (take >5 seconds)",
    "api: API endpoint tests",
    "parser: Parser tests",
]

# ----------------------------------------------------------------------------
# Coverage Configuration (Test Coverage)
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["app", "db_service/app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/alembic/*",
    "*/migrations/*",
]

branch = true  # Measure branch coverage
parallel = true  # Allow parallel execution

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Fail if coverage is below threshold
fail_under = 80

# Exclude lines from coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ----------------------------------------------------------------------------
# mypy Configuration (Type Checking)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict typing
ignore_missing_imports = true

# Paths to check
files = ["app", "db_service/app"]

# Exclude paths
exclude = [
    "venv",
    ".venv",
    "alembic/versions",
    "tests",
]

# ----------------------------------------------------------------------------
# ruff Configuration (Fast Python Linter)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore these specific rules
ignore = [
    "E203",  # Whitespace before ':' (conflicts with Black)
    "E501",  # Line too long (handled by Black)
    "B008",  # Do not perform function calls in argument defaults
    "W503",  # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py
"__init__.py" = ["F401"]

# Allow print statements in scripts
"scripts/*" = ["T201"]
